Renamed to Highlander

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Top Players
-main: com.fernferret.TopPlayers.TopPlayers
+main: com.pneumaticraft.highlander.Highlander
 authors: fernferret
 version: maven-version-number
 commands:
